# komadome-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile
config/: komadome.toml
crates/komadome/: Cargo.toml
crates/komadome/src/: cli.rs  clock.rs  config.rs  main.rs  tailwind.rs
crates/komadome/src/commands/: build.rs  clean.rs  mod.rs  stats.rs  validate.rs
crates/komadome/src/commands/export/: cards.rs  db.rs  db_helpers.rs  export_helpers.rs  list_inp.rs  masters.rs  mod.rs  news.rs  person_all_indexes.rs  person_indexes.rs  person_pages.rs  top.rs  whatsnew.rs  wip_person_indexes.rs  wip_work_indexes.rs  work_indexes.rs
crates/komadome/src/commands/generate_zip/: basic.rs  finished_basic.rs  finished_extended.rs  headers.rs  inp_basic.rs  mod.rs
crates/komadome/src/commands/validate_data/: html.rs  mod.rs  report.rs
crates/komadome/src/data/: loader.rs  masters.rs  mod.rs  models.rs
crates/komadome/src/data/models/: card.rs  kana_index.rs  list_inp.rs  mod.rs  news.rs  pagination.rs  person.rs  person_all.rs  person_index.rs  tests.rs  top.rs  whatsnew.rs  wip.rs  work.rs  work_index.rs
crates/komadome/src/generator/: contracts.rs  kana.rs  mod.rs  pagination.rs  templates.rs
crates/komadome/src/generator/builder/: card.rs  list_inp.rs  mod.rs  pagination.rs  person.rs  person_all_index.rs  person_index.rs  soramoyou.rs  static_pages.rs  top.rs  whatsnew.rs  wip_person_index.rs  wip_work_index.rs  work_index.rs
crates/komadome/static/: 404.html
crates/komadome/tests/fixtures/: card_data.json  list_inp_data.json  masters_data.json  news_data.json  person_all_index_data.json  person_index_data.json  person_page_data.json  top_page_data.json  whatsnew_data.json  wip_person_index_data.json  wip_work_index_data.json  work_index_data.json
deploy/: crontab  (+5 more)
(+34 files in other folders)
